Fixes spacing in footer columns, fixes height on left fixed feature.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -294,7 +294,8 @@ hr.line {
 	position: fixed;
 	height: 100%;
 	width: 25%;
-	.widget.feature {
+	.widget.feature,
+	.feature-bgimg {
 		height: 100%;
 	}
 }
@@ -937,6 +938,12 @@ button.btn:disabled:hover,
 	padding: 20px 30px;
 	.template-aside {
 		width: 50%;
+	}
+	.left {
+		padding-right: 1%;
+	}
+	.right {
+		padding-left: 1%;
 	}
 }
 
